hphp/test/quick/priv5.php.expectf
HipHop Fatal error: Call to private method A5::A5 from context B5 in %s on line 8
